Реализация слоя инфраструктуры

--- a/LeagueManager.WebApi/appsettings.json
+++ b/LeagueManager.WebApi/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LeagueManager": "Data Source=localhost;Initial Catalog=SaleDb;User ID=sa;Password=123456789;Encrypt=False;"
+  },
+  "FileStorage": {
+    "RootPath": "C:\\LeagueManagerStorage"
+  },
+  "Smtp": {
+    "Host": "smtp.leaguemanager.com",
+    "Port": 587,
+    "UserName": "admin@leaguemanager.com",
+    "Password": "admin",
+    "From": "no-reply@leaguemanager.com"
+  }
 }
