--- a/LeagueManager.Persentation/LeagueManager.Persentation.csproj
+++ b/LeagueManager.Persentation/LeagueManager.Persentation.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LeagieManager.Application\LeagueManager.Application.csproj" />
+  </ItemGroup>
+
 </Project>
